name = "payjoin"
version = "0.13.0"
license = "MIT OR Apache-2.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
payjoin = { version = "0.9.0", features = ["send", "receive", "rand"] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
